--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -14,3 +14,10 @@ input:-internal-autofill-selected {
   background-color: transparent !important;
   color: fieldtext !important;
 }
+
+th{
+  padding: 0.8rem;
+}
+td{
+  padding: 0.8rem;
+}
